# ExoPlayer

./: .gitignore  .hgignore  build.gradle  core_settings.gradle  core_settings.gradle.orig  settings.gradle
demos/cast/: build.gradle
demos/cast/src/main/java/com/google/android/exoplayer2/castdemo/: DemoUtil.java  PlayerManager.java
demos/main/: build.gradle
demos/main_ia/: build.gradle
demos/main_ia/src/main/: AndroidManifest.xml
demos/main_ia/src/main/assets/: brir2.riff  media.exolist.json
demos/main_ia/src/main/java/com/google/android/exoplayer2/demo/: DemoApplication.java  ExoplayerDemoActivity.java  PlayerActivity.java  SampleChooserActivity.java  SpappActivity.java
demos/main_ia/src/main/res/layout/: exoplayer_test_activity.xml  ia_setting_dialog.xml  listitem_cp.xml
demos/main_ia/src/main/res/menu/: main_menu.xml
demos/main_ia/src/main/res/raw/: com_sony_immersive_audio_brir_standard.riff
demos/main_ia/src/main/res/values/: strings.xml
demos/main_mpegh/: build.gradle
demos/main_mpegh/src/main/: AndroidManifest.xml
demos/main_mpegh/src/main/assets/: media.exolist.json
demos/main_mpegh/src/main/java/com/google/android/exoplayer2/demo/: SampleChooserActivity.java  SpappActivity.java
demos/main_mpegh/src/main/res/layout/: ia_setting_dialog.xml  sample_chooser_activity.xml
demos/main_mpegh/src/main/res/menu/: sample_chooser_menu.xml
demos/main_mpegh/src/main/res/raw/: com_sony_immersive_audio_brir_standard.riff
extensions/flac/: jacoco.exec
extensions/mpegh/: README.md  build.gradle
extensions/mpegh/src/main/: AndroidManifest.xml
extensions/mpegh/src/main/java/com/google/android/exoplayer2/audio/: MpeghAudioTrackPositionTracker.java  MpeghTrimmingAudioProcessor.java
extensions/mpegh/src/main/java/com/google/android/exoplayer2/util/: MpeghUtil.java
extensions/mpegh/src/main/jni/: ALCApi_rename.h  CMakeLists.txt  alc.h  alc_component.h  alc_jni.cc  libSonyIA_mobile.h  mpegh_decoder.cc  mpegh_decoder.h  mpegh_jni.cc  virtualizer_jni.cc
extensions/mpeghaudio/: build.gradle  proguard-rules.txt
extensions/mpeghaudio/src/main/: AndroidManifest.xml
extensions/mpeghaudio/src/main/jni/: ALCApi_rename.h  CMakeLists.txt  SonyIA_mobile_Virtualizer.h  alc.cc  alc_jni.cc  mpegh_decoder.h  virtualizer_jni.cc
extensions/virtualizer/: README.md  build.gradle
extensions/virtualizer/src/main/: AndroidManifest.xml
extensions/virtualizer/src/main/jni/: Application.mk  CMakeLists.txt  virtualizer_jni.cc
(+40 files in other folders)
